package m.derakhshan.done.feature_authentication.utils

object AuthenticationTestingConstants {
    const val PASSWORD_TEXT_FIELD = "PASSWORD_FIELD"
    const val EMAIL_TEXT_FIELD = "EMAIL_TEXT_FIELD"
    const val NAME_FAMILY_TEXT_FIELD = "NAME_FAMILY_TEXT_FIELD"
    const val PASSWORD_VISIBILITY_ICON_BUTTON = "PASSWORD_VISIBILITY_ICON_BUTTON"
    const val LOGIN_BUTTON = "LOGIN_BUTTON"
}